Popover for items

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@
 /SmiteBuilder/wwwroot/images
 /SmiteBuilder/obj/Release/netcoreapp2.0/SmiteBuilder.AssemblyInfoInputs.cache
 /SmiteBuilder/obj/Release/netcoreapp2.0/SmiteBuilder.csproj.CoreCompileInputs.cache
+/SmiteBuilder/bin/Debug/netcoreapp2.0
+/SmiteBuilder/obj/Debug/netcoreapp2.0
