--- a/SmiteBuilder/bundleconfig.json
+++ b/SmiteBuilder/bundleconfig.json
@@ -5,7 +5,8 @@
     "outputFileName": "wwwroot/css/site.min.css",
     // An array of relative input file paths. Globbing patterns supported
     "inputFiles": [
-      "wwwroot/css/site.css"
+      "wwwroot/css/site.css",
+      "wwwroot/lib/bootstrap/dist/css/bootstrap.css"
     ]
   },
   {
@@ -19,6 +20,7 @@
       "renameLocals": true
     },
     // Optionally generate .map file
+    "includeInProject": true,
     "sourceMap": false
   }
 ]
