itemrole updated with all equipment, will add consumables next.

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@
 /SmiteBuilder/obj/Release/netcoreapp2.0/SmiteBuilder.csproj.CoreCompileInputs.cache
 /SmiteBuilder/bin/Debug/netcoreapp2.0
 /SmiteBuilder/obj/Debug/netcoreapp2.0
+/SmiteBuilder/obj/Release/netcoreapp2.0/SmiteBuilder.csprojResolveAssemblyReference.cache
