--- a/SmiteBuilder/bundleconfig.json
+++ b/SmiteBuilder/bundleconfig.json
@@ -11,7 +11,8 @@
   {
     "outputFileName": "wwwroot/js/site.min.js",
     "inputFiles": [
-     "wwwroot/js/site.js"
+      "wwwroot/js/masonry.pkgd.js","wwwroot/js/site.js"
+        
     ],
     // Optionally specify minification options
     "minify": {
